test/e2e/chainsaw/httproute-extra-backends/assertions/httproute-canary.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-extra-backends
  namespace: default
spec:
  (length(rules)): 1
  rules:
    - (length(backendRefs)): 3
      backendRefs:
        - name: httproute-extra-backends-stable-service
          (weight): 70
        - name: httproute-extra-backends-canary-service
          (weight): 30
        - name: httproute-extra-backends-extra-service
