test/e2e/chainsaw/httproute-extra-backends/resources/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httproute-extra-backends
  namespace: default
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: default
  rules:
    - backendRefs:
        - name: httproute-extra-backends-stable-service
          port: 80
        - name: httproute-extra-backends-canary-service
          port: 80
        - name: httproute-extra-backends-extra-service
          port: 80
